--- a/client/src/app/shared/spreadsheet/components/field-cell/date/cell.component.html
+++ b/client/src/app/shared/spreadsheet/components/field-cell/date/cell.component.html
@@ -9,8 +9,8 @@
     appendTo="body"
     [(visible)]="calendarVisible"
     [target]="eleRef.nativeElement"
-    (onShow)="onMenuOpened()"
-    (onHide)="onMenuClosed()"
+    (onShow)="onMenuOpen()"
+    (onHide)="onMenuClose()"
   >
     <p-datepicker
       [inline]="true"
