--- a/client/src/app/shared/spreadsheet/components/field-cell/select/cell.component.html
+++ b/client/src/app/shared/spreadsheet/components/field-cell/select/cell.component.html
@@ -9,7 +9,7 @@
     [model]="items"
     appendTo="body"
     [popup]="true"
-    (onShow)="onMenuOpened()"
-    (onHide)="onMenuClosed()"
+    (onShow)="onMenuOpen()"
+    (onHide)="onMenuClose()"
   />
 }
