feat: enhance MultiSelect field functionality with item selection
- Added a template for rendering selectable items in the MultiSelect component.
- Introduced an addOption method to handle item selection and update the parsed data accordingly.
- Simplified the item mapping logic in the onMenuOpen method for better clarity.

--- a/client/src/app/shared/spreadsheet/components/field-cell/multi-select/cell.component.html
+++ b/client/src/app/shared/spreadsheet/components/field-cell/multi-select/cell.component.html
@@ -21,5 +21,15 @@
     [popup]="true"
     (onShow)="onMenuOpen()"
     (onHide)="onMenuClose()"
-  />
+  >
+    <ng-template #item let-item>
+      <a
+        pRipple
+        class="flex p-menu-item-link"
+        (click)="$event.stopPropagation(); addOption(item.label)"
+      >
+        {{ item.label }}
+      </a>
+    </ng-template>
+  </p-menu>
 }
