--- a/client/src/app/features/base/table/components/field-editors/date/editor.component.html
+++ b/client/src/app/features/base/table/components/field-editors/date/editor.component.html
@@ -13,7 +13,7 @@
     [(ngModel)]="data"
     [showTime]="true"
     [showClear]="true"
-    [fluid]="true"
     appendTo="body"
+    fluid
   />
 </div>
