--- a/client/src/app/features/base/table/components/field-editors/json/editor.component.html
+++ b/client/src/app/features/base/table/components/field-editors/json/editor.component.html
@@ -15,7 +15,7 @@
       [readonly]="viewOnly()"
       [(ngModel)]="data"
       rows="5"
-      class="w-full"
+      fluid
     ></textarea>
     <p-button
       icon="icon icon-maximize-2"
