style: enhance spreadsheet cell styling for improved layout
- Added fit-content height, minimum height of 100%, and maximum height of 124px to spreadsheet cells.
- Improved overall responsiveness and visual consistency in the spreadsheet component.

--- a/client/src/app/shared/spreadsheet/spreadsheet.component.scss
+++ b/client/src/app/shared/spreadsheet/spreadsheet.component.scss
@@ -687,6 +687,9 @@ $blank-row-height: 32px;
 
           &:has(.field-cell) {
             padding: 2px;
+            height: fit-content;
+            min-height: 100%;
+            max-height: 124px;
             ::ng-deep {
               .field-cell {
                 padding: 4px 6px 3px;
