feat: add email field support in column and record editors
- Introduced EmailFieldEditorComponent for handling email data type in both column and record editors.
- Updated HTML templates to include email field rendering logic.
- Enhanced data type mapping to support custom email domain in the database.
- Improved overall field handling in the spreadsheet component to accommodate email data type.

--- a/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
+++ b/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
@@ -255,6 +255,7 @@
                 <ng-container [ngTemplateOutlet]="optionsBuilder" />
               }
               @case (DataType.Checkbox) {}
+              @case (DataType.Email) {}
               @case (DataType.JSON) {
                 <div class="flex flex-col gap-1">
                   <label class="text-sm">Max size (bytes)</label>
@@ -336,6 +337,14 @@
               }
               @case (DataType.Date) {
                 <date-field-editor
+                  [field]="internalField"
+                  [(data)]="columnFormData.defaultValue"
+                  [label]="false"
+                  class="col-span-2"
+                />
+              }
+              @case (DataType.Email) {
+                <email-field-editor
                   [field]="internalField"
                   [(data)]="columnFormData.defaultValue"
                   [label]="false"
