feat: add URL field support in column and record editors
- Introduced UrlFieldEditorComponent for handling URL data type in both column and record editors.
- Updated HTML templates to include URL field rendering logic.
- Enhanced data type mapping to support URL in the database and spreadsheet components.
- Improved overall field handling to accommodate URL data type.

--- a/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
+++ b/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
@@ -351,6 +351,14 @@
                   class="col-span-2"
                 />
               }
+              @case (DataType.Url) {
+                <url-field-editor
+                  [field]="internalField"
+                  [(data)]="columnFormData.defaultValue"
+                  [label]="false"
+                  class="col-span-2"
+                />
+              }
               @case (DataType.JSON) {
                 <json-field-editor
                   [field]="internalField"
