--- a/client/src/app/features/base/table/components/field-editors/date/editor.component.html
+++ b/client/src/app/features/base/table/components/field-editors/date/editor.component.html
@@ -1,8 +1,17 @@
 @let fieldName = field().name;
+@let fieldDescription = field().description;
 
-<div class="flex flex-col gap-2 w-full">
+<div class="flex flex-col gap-1 w-full">
   @if (label() !== false) {
-    <label [attr.for]="fieldName">{{ fieldName }}</label>
+    <label class="text-sm" [attr.for]="fieldName">
+      <p class="flex items-center gap-1">
+        <i [class]="field().icon"></i>
+        {{ fieldName }}
+      </p>
+      @if (fieldDescription) {
+        <p class="text-xs text-surface-500">{{ fieldDescription }}</p>
+      }
+    </label>
   }
   <p-datepicker
     [inputId]="fieldName"
@@ -13,6 +22,8 @@
     [(ngModel)]="data"
     [showTime]="true"
     [showClear]="true"
+    [showIcon]="true"
+    [iconDisplay]="'input'"
     appendTo="body"
     fluid
   />
