--- a/client/src/app/features/base/table/components/field-editors/long-text/editor.component.html
+++ b/client/src/app/features/base/table/components/field-editors/long-text/editor.component.html
@@ -1,4 +1,5 @@
 @let fieldName = field().name;
+@let fieldDescription = field().description;
 
 <rich-text-editor-drawer
   [(visible)]="visibleRichTextEditor"
@@ -6,9 +7,17 @@
   (onSave)="data.set($event)"
 />
 
-<div class="flex flex-col gap-2 w-full">
+<div class="flex flex-col gap-1 w-full">
   @if (label() !== false) {
-    <label [attr.for]="fieldName">{{ label() || fieldName }}</label>
+    <label class="text-sm" [attr.for]="fieldName">
+      <p class="flex items-center gap-1">
+        <i [class]="field().icon"></i>
+        {{ fieldName }}
+      </p>
+      @if (fieldDescription) {
+        <p class="text-xs text-surface-500">{{ fieldDescription }}</p>
+      }
+    </label>
   }
   <div class="relative w-full">
     <textarea
