--- a/client/src/app/features/base/table/components/field-editors/long-text/editor.component.html
+++ b/client/src/app/features/base/table/components/field-editors/long-text/editor.component.html
@@ -22,6 +22,9 @@
   <div class="relative w-full">
     <textarea
       pTextarea
+      #input="ngModel"
+      [required]="field().required"
+      [invalid]="input.invalid && input.touched"
       [id]="fieldName"
       [placeholder]="placeholder() ?? 'Input here...'"
       [pAutoFocus]="autoFocus()"
@@ -40,4 +43,11 @@
       (click)="visibleRichTextEditor = true"
     />
   </div>
+  @if (input.invalid && input.touched) {
+    <p-message severity="error" size="small" variant="simple">
+      @if (input.hasError('required')) {
+        {{ fieldName }} is required.
+      }
+    </p-message>
+  }
 </div>
