--- a/client/src/app/features/base/table/components/field-editors/json/editor.component.html
+++ b/client/src/app/features/base/table/components/field-editors/json/editor.component.html
@@ -9,6 +9,9 @@
       <p class="flex items-center gap-1">
         <i [class]="field().icon"></i>
         {{ fieldName }}
+        @if (field().required) {
+          <i class="icon icon-asterisk text-red-500"></i>
+        }
       </p>
       @if (fieldDescription) {
         <p class="text-xs text-surface-500">{{ fieldDescription }}</p>
