feat: implement GeoPoint field editor in column and record components
- Added GeoPointFieldEditorComponent to handle GeoPoint data type in both column and record editors.
- Updated HTML templates to render GeoPoint fields appropriately, enhancing user interaction.
- Ensured consistent integration of GeoPoint support across relevant components.

--- a/client/src/app/features/base/table/components/record-editor/record-editor-drawer.component.html
+++ b/client/src/app/features/base/table/components/record-editor/record-editor-drawer.component.html
@@ -127,7 +127,15 @@
             class="col-span-2"
           />
         }
-        @case (DataType.GeoPoint) {}
+        @case (DataType.GeoPoint) {
+          <geo-point-field-editor
+            [field]="field"
+            [(data)]="updatedRecord[field.name]"
+            [viewOnly]="viewOnly() || field.params.primary"
+            [label]="false"
+            class="col-span-2"
+          />
+        }
       }
     }
   </div>
