--- a/client/src/app/features/base/table/pages/table-list/table-list.component.html
+++ b/client/src/app/features/base/table/pages/table-list/table-list.component.html
@@ -88,7 +88,7 @@
             <i class="icon icon-table-2 text-surface-500 mr-2 mt-0.5"></i>
             <div class="flex-1">
               <p class="font-medium">{{ table.tableName }}</p>
-              <p class="font-light text-surface-500 text-xs">
+              <p class="text-surface-500 text-xs">
                 @if (table.tableComment) {
                   {{ table.tableComment }}
                 } @else {
