refactor: replace PointValuePipe with PointFormatPipe for GeoPoint handling
- Updated GeoPointFieldEditorComponent and GeoPointFieldCellComponent to use PointFormatPipe for formatting GeoPoint data.
- Refactored HTML templates to utilize the new pipe, ensuring consistent data representation.
- Removed the obsolete PointValuePipe and implemented a new formatPoint function for improved data processing.
- Enhanced the TableCellService to format GeoPoint data correctly during table operations.

--- a/client/src/app/features/base/table/components/field-editors/geo-point/editor.component.html
+++ b/client/src/app/features/base/table/components/field-editors/geo-point/editor.component.html
@@ -27,7 +27,7 @@
     [pAutoFocus]="autoFocus()"
     [readonly]="viewOnly()"
     [pKeyFilter]="geoRegex"
-    [ngModel]="data()"
+    [ngModel]="data() | pointFormat"
     (ngModelChange)="data.set($any($event))"
     fluid
   />
