--- a/client/src/app/features/auth/login/login.component.html
+++ b/client/src/app/features/auth/login/login.component.html
@@ -3,7 +3,7 @@
     <ng-template pTemplate="header">
       <div class="flex flex-col items-center pt-6 pb-2 gap-2">
         <img src="assets/images/logo.png" alt="Logo" class="h-20" />
-        <p class="font-medium text-lg">Welcome to PolarBase</p>
+        <p class="font-medium text-lg">Polar<b>Base</b></p>
       </div>
     </ng-template>
 
