--- a/client/src/app/layouts/auth-layout/auth-layout.component.html
+++ b/client/src/app/layouts/auth-layout/auth-layout.component.html
@@ -1,1 +1,8 @@
 <router-outlet />
+<a
+  target="_blank"
+  href="https://github.com/polarbase-team/polarbase/releases"
+  class="absolute bottom-3 w-full text-center text-xs text-surface-400 hover:text-surface-500 hover:underline"
+>
+  © 2025-2026 Polar<b>Base</b> {{ appVersion }}
+</a>
