feat: add support for Reference data type in table and record editors
- Introduced the Reference data type in the DataType model.
- Updated ColumnEditorDrawer and RecordEditorDrawer components to handle Reference data type cases.
- Enhanced TableService and related interfaces to accommodate foreign key options for Reference data type.
- Modified utility functions and database schema retrieval to support foreign key constraints and reference handling.

--- a/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
+++ b/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
@@ -267,6 +267,8 @@
                   />
                 </div>
               }
+              @case (DataType.GeoPoint) {}
+              @case (DataType.Reference) {}
             }
           </div>
         </div>
