--- a/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
+++ b/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
@@ -224,8 +224,8 @@
                   <p-datepicker
                     name="minDate"
                     [(ngModel)]="columnFormData.validation.minDate"
-                    [dataType]="'string'"
-                    [dateFormat]="'yy-mm-dd'"
+                    dataType="string"
+                    dateFormat="yy-mm-dd"
                     [showTime]="true"
                     [showClear]="true"
                     appendTo="body"
@@ -238,8 +238,8 @@
                   <p-datepicker
                     name="maxDate"
                     [(ngModel)]="columnFormData.validation.maxDate"
-                    [dataType]="'string'"
-                    [dateFormat]="'yy-mm-dd'"
+                    dataType="string"
+                    dateFormat="yy-mm-dd"
                     [showTime]="true"
                     [showClear]="true"
                     appendTo="body"
