--- a/client/src/app/shared/field-system/editors/date/editor.component.html
+++ b/client/src/app/shared/field-system/editors/date/editor.component.html
@@ -31,7 +31,7 @@
     [showTime]="true"
     [showClear]="true"
     [showIcon]="true"
-    [iconDisplay]="'input'"
+    iconDisplay="input"
     appendTo="body"
     fluid
   />
