--- a/client/src/app/shared/spreadsheet/spreadsheet.component.html
+++ b/client/src/app/shared/spreadsheet/spreadsheet.component.html
@@ -533,7 +533,7 @@
                         <div class="row__expand-handle">
                           <i
                             class="icon icon-maximize-2 text-surface-500"
-                            [pTooltip]="'View Detail'"
+                            pTooltip="View Detail"
                             tooltipPosition="top"
                             (click)="tableRowService.expandRow(row)"
                           ></i>
