--- a/client/src/app/features/base/table/pages/table-list/table-list.component.html
+++ b/client/src/app/features/base/table/pages/table-list/table-list.component.html
@@ -40,7 +40,7 @@
       icon="icon icon-refresh-cw"
       severity="secondary"
       [text]="true"
-      [pTooltip]="'Refresh table list'"
+      pTooltip="Refresh table list"
       tooltipPosition="bottom"
       [disabled]="isLoading()"
       (click)="refreshTables()"
@@ -49,7 +49,7 @@
       icon="icon icon-plus"
       severity="secondary"
       [text]="true"
-      [pTooltip]="'Add new table'"
+      pTooltip="Add new table"
       tooltipPosition="bottom"
       [disabled]="isLoading()"
       (click)="addNewTable()"
