--- a/client/src/app/shared/spreadsheet/components/field-cell/geo-point/cell.component.html
+++ b/client/src/app/shared/spreadsheet/components/field-cell/geo-point/cell.component.html
@@ -21,7 +21,7 @@
       />
       <div
         class="hover:bg-surface-50 text-surface-500 cursor-pointer w-5 h-5 rounded-md flex items-center justify-center"
-        [pTooltip]="'View on map'"
+        pTooltip="View map"
         tooltipPosition="top"
         (click)="openMap()"
       >
