feat: add selected item template to column editor drawer
- Introduced a new template for displaying selected items in the column editor drawer, enhancing the user interface by showing icons alongside item names.

--- a/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
+++ b/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
@@ -138,6 +138,12 @@
                     <span>{{ item.name }}</span>
                   </div>
                 </ng-template>
+                <ng-template let-selectedItem pTemplate="selectedItem">
+                  <div class="flex items-center gap-2">
+                    <i [class]="selectedItem.icon"></i>
+                    <span>{{ selectedItem.name }}</span>
+                  </div>
+                </ng-template>
               </p-select>
             </div>
             @switch (selectedDataType()) {
